<resources>
    <string name="app_name">Marsad</string>
    <string name="preferences_file_key" translatable="false">com.example.marsad.PREFERENCE_FILE_KEY</string>
    <string name="home">My Location</string>
    <string name="favorites">Favorite Locations</string>
    <string name="settings">Settings</string>
    <string name="weather_alerts">Weather Alerts</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="clouds">Clouds</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">m/Sec</string>
    <string name="miles_hour">M/Hour</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="percentageSymbol" translatable="false">%</string>
    <string name="pressure_unit">hPa</string>
    <string name="celsius_suffix">°C</string>
    <string name="permission_msg">We are unable to get your weather data due to location permission, please give us the permission by tapping on the following button</string>
    <string name="grant">Grant</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="confirm_location">Confirm</string>
    <string name="latitude_key" translatable="false">latitude_key</string>
    <string name="longitude_key" translatable="false">longitude</string>
    <string name="first_use_key" translatable="false">first_use</string>
    <string name="is_having_location_key" translatable="false">IS_HAVING_LOCATION</string>
    <string name="units">Units</string>
    <string name="temperature">temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="notification_header">Notifications</string>
    <string name="notification_title">Enable Notifications</string>
    <string name="general">General</string>
    <string name="location_method">How to get your location</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="feels_like">Feels Like</string>
    <string name="fahrenheit_suffix">°F</string>
    <string name="kelvin_suffix">°K</string>
    <string name="language_key" translatable="false">language</string>
    <string name="pref_location_method_key" translatable="false">locationMethod</string>
    <string name="dialog_msg">Use GPS to automatically get your location or pick one from the map</string>
    <string name="add_to_favorites">Add To favorites</string>
    <string name="no_locations_msg">No Saved Locations yet Use below button to add new</string>
    <string name="open_nav" translatable="false">openDrawer</string>
    <string name="close_nav" translatable="false">closeDrawer</string>
    <string name="no_alerts_msg">No Active Alerts</string>
    <string name="add_new_alert">Add New Alert</string>
    <string name="save">Save</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="alerts_channel_name" translatable="false">Alerts Channel</string>
    <string name="alerts_channel_description" translatable="false">This channel is used for sending alerts for weather</string>
    <string name="no_alerts_description">Everything is fine during the specified period</string>
    <string name="alert_title_key" translatable="false">alertTitle</string>
    <string name="alert_description_key" translatable="false">alertDescription</string>
    <string name="alert_type_key" translatable="false">alertType</string>
    <string name="alert_id_key" translatable="false">alertId</string>
    <string name="alert_Item_key" translatable="false">alertItemKey</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="pick_a_location">Pick Location</string>
    <string name="today">Today</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="undo">Undo</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_dates_warning"><![CDATA[Please Choose Start & End Dates]]></string>
    <string name="invalid_date_range">Start Must be before End</string>
    <string name="alert_scheduled">Alert Scheduled to</string>
    <string name="enable">Enable</string>
    <string name="no_internet_msg">⚠️ No Internet</string>
    <string name="internet_action" translatable="false">InternetAction</string>
    <string name="empty" translatable="false" />
    <string name="error_getting_data">An Error Occurred</string>
</resources>