<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/general">
        <ListPreference
            app:entries="@array/location_method_entries"
            app:entryValues="@array/location_method_values"
            app:key="locationMethod"
            app:title="@string/location_method"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">
        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/notification_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/units">
        <ListPreference
            app:defaultValue="celsius"
            app:entries="@array/temp_entries"
            app:entryValues="@array/temp_values"
            app:key="@string/temperature"
            app:title="@string/temperature"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="meter/second"
            app:entries="@array/wind_speed_entries"
            app:entryValues="@array/wind_speed_values"
            app:key="@string/wind_speed"
            app:title="@string/wind_speed"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <ListPreference
        app:allowDividerAbove="true"
        app:defaultValue="english"
        app:entries="@array/language_entries"
        app:entryValues="@array/language_values"
        app:key="@string/language_key"
        app:title="@string/language"
        app:useSimpleSummaryProvider="true" />


</PreferenceScreen>