<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/Theme.Marsad"
    android:layout_height="match_parent"
    android:background="@drawable/top_circular_gradient_bg"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/standard_bottom_sheet"
        style="ThemeOverlay.Material3.BottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/from_tv"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/from"
            android:textColor="@color/md_theme_light_onPrimary"
            app:layout_constraintBottom_toTopOf="@+id/to_tv"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/drag_handle" />

        <TextView
            android:id="@+id/to_tv"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/to"
            android:textColor="@color/md_theme_light_onPrimary"
            app:layout_constraintBottom_toTopOf="@+id/radio_group"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/from_tv" />

        <Button
            android:id="@+id/pick_start_date_button"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_onPrimary"
            android:text="@string/pick_a_date"
            app:icon="@drawable/ic_date_range_24"
            app:layout_constraintBaseline_toBaselineOf="@+id/from_tv"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            tools:layout_editor_absoluteX="196dp" />

        <Button
            android:id="@+id/pick_end_date_button"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_onPrimary"
            android:text="@string/pick_a_date"
            app:icon="@drawable/ic_date_range_24"
            app:layout_constraintBaseline_toBaselineOf="@+id/to_tv"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            tools:layout_editor_absoluteX="196dp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/radio_group"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:checkedButton="@id/radio_button_notification"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/to_tv">

            <RadioButton
                android:id="@+id/radio_button_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circular_white_bg"
                android:drawableEnd="@drawable/ic_alarm_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/md_theme_light_primary"
                android:padding="8dp"
                android:text="@string/alarm" />

            <RadioButton
                android:id="@+id/radio_button_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circular_white_bg"
                android:drawableEnd="@drawable/ic_alert_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/md_theme_light_primary"
                android:padding="8dp"
                android:text="@string/notification"
                app:useMaterialThemeColors="false" />
        </RadioGroup>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            style="@style/Widget.Material3.Button.ElevatedButton"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8515815" />

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            style="@style/Widget.Material3.BottomSheet.DragHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/from_tv"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/md_theme_light_onPrimary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>